# grpug-dataclasses-slides

./: Dataclasses.ipynb  LICENSE  Makefile  README.md  greet2.py  people.py  pyproject.toml
notebooks/: greet.py  input.ipynb  output.ipynb
notebooks/items/: widget.yml
