[tool.poetry]

name = "python-dataclass-slides"
version = "1.0"
description = "Presentation on Python type annotations, dataclasses, and, my datafiles library."
authors = ["Jace Browning <jacebrowning@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]

python = "^3.7"

jupyter = "^1.0"
papermill = "^1.0"
nbstripout = "^0.3.6"

mypy = "=0.720"
datafiles = "^0.4"

[build-system]

requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
